--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "(gdb) Launch",
+			"name": "(gdb) Launch quick_sort",
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceRoot}/quick",
@@ -28,6 +28,31 @@
 					}
 			],
 			"preLaunchTask": "build quick_sort"
+		},
+		{
+			"name": "(gdb) Launch shell_sort",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceRoot}/shell",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${fileDirname}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands": [
+					{
+							"description": "Enable pretty-printing for gdb",
+							"text": "-enable-pretty-printing",
+							"ignoreFailures": true
+					},
+					{
+							"description": "Set Disassembly Flavor to Intel",
+							"text": "-gdb-set disassembly-flavor intel",
+							"ignoreFailures": true
+					}
+			],
+			"preLaunchTask": "build shell_sort"
 		},
 	]
 }
